# Projet-8

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  project_paths.py  pyproject.toml
.github/workflows/: ci.yml  deploy_hf.yml
app/: input_adapter.py  main.py  model_loader.py  schemas.py  storage.py
app/artifacts/: model.joblib  model_meta.json
app/examples/: example_input_compact.csv  example_input_compact.json
data/prod/: predictions.sqlite
data/reference/: requested_config.json
monitoring/: dashboard.py  drift_utils.py  run_drift.py
notebooks/: analyses.ipynb  exploration.ipynb
outputs/monitoring/: drift_report.json
outputs/perf/: bench_baseline.json
scripts/: bench_api.py  build_example_inputs.py  build_requested_groups.py  freeze_champion.py  make_reference_sample.py  make_test_artifacts.py  predict_smoke.py
src/fonctions/: fonction_mlflow.py  fonction_recall.py  fonctions_features.py
tests/: conftest.py  test_api.py  test_batch.py  test_monitoring.py
tests/assets/artifacts/: model.joblib  model_meta.json
