[project]
name = "projet-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evidently>=0.7.20",
    "fastapi>=0.128.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
